--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css'/>
 </head>
 <body style="width:800px; height:500px;">
   <div id="button">
-    <button class="btn" id="getData">get data</button>
+    <button class="btn btn-sm btn-primary" id="getData">get data</button>
   </div>
   <div id='results'></div>
 </body>
